# ffdd

./: .gitignore  404.html  README.md  environment.yml  index.html  make-transparent.py  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
api/: index.html
example/: index.html
examples/: example.py
ffdd/: decay.py  energy.py  mass.py  sepn.py  tke.py  utils.py  yields.py
ffdd.egg-info/: PKG-INFO  SOURCES.txt
further/: index.html
installation/: index.html
physics/: index.html
search/: search_index.json
stylesheets/: cosmos.css  extra.css  latex.css
tests/: test_normalization.py
unitary_tests/: test_conservation.py
visual_tests/: plot_mass.py  plot_sepn.py  plot_tke.py  plot_yields.py
