[project]
name = "ffdd"
version = "0.1.0"
description = "FFDD - Fission Fragments Decay for Dummies"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Baptiste Fraïsse", email = "fraisse@cua.edu" }]

dependencies = [
  "matplotlib>=3.5",
  "numpy>=1.23",
  "pandas>=1.5",
  "openmc>=0.13.3"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "black", "mypy", "pytest-mpl"]
docs = ["mkdocs-material", "mkdocstrings-python"]

[project.urls]
Homepage = "https://github.com/baptistefraisse/ffdd"
Documentation = "https://baptistefraisse.github.io/ffdd/"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { include = ["ffdd*"] } }

[tool.setuptools.package-data]
ffdd = ["data/**/*"]

[tool.ruff]
line-length = 100
